name:                ID
version:             0.1.0.0
synopsis:            Text-based identity labels.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     
    Data.ID
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >= 4.8 && < 4.10
    , cereal >= 0.4 && < 0.6
    , cereal-text >= 0.1 && < 0.2
    , random >= 1.1 && < 1.2
    , text >= 1.2 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
